Opened 4 years ago
Closed 4 years ago
#16984 closed bug (fixed)
Installer: General system error when writing nightly image
Reported by: | humdinger | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta4 |
Component: | Applications/Installer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev55102+1, 64bit
I downloaded haiku-master-hrev55125-x86_gcc2h-anyboot.zip, unpacked it and mounted it after a diskimage register /TheAttic/haiku-master-hrev55125-x86_gcc2h-anyboot.iso
. Using Installer to put it on an empty partition results in a General system error fairly at the end (at 262 of 356 files). Started from Terminal it says:
/TheAttic> Installer ignoring '_packages_'. 523196848 bytes to write in 356 files ignoring '_packages_'. Writing boot code to "/dev/disk/scsi/0/5/0/1_5" (partition offset: 86402826240 bytes, start offset = 0) ... /bin/sh: line 1: /Testiku/system/packages/administrative/FirstBootProcessingNeeded: No such file or directory 498.96 MB written (163.04 MB/s)
I assume it's not an Installer problem but something with the packaging of the nightly? Leaving ticket in "General" category...
Change History (9)
comment:1 by , 4 years ago
comment:2 by , 4 years ago
Don’t you have to convert the anyboot image to a raw image first, before mounting and installing to another partition?
comment:3 by , 4 years ago
Nope, once you've a mounted image/partition with a Haiku installation on it, you can use it as source in Installer.
comment:4 by , 4 years ago
55091 didn't touch this file. It is created by Installer to let the newly installed system that it will be doing a "first boot" (and so needs to generate its own ssh host key, and generally run first boot scripts)
It looks like the /Testiku/system/packages/administrative/ directory does not exist, and so the command here fails: https://git.haiku-os.org/haiku/tree/src/apps/installer/WorkerThread.cpp#n318
Maybe Installer should create that directory? Or maybe we should make sure it exists in the source image and is correctly copied over?
comment:5 by , 4 years ago
Component: | - General → Applications/Installer |
---|
comment:6 by , 4 years ago
I have the same problem with beta3 test candidate 1, downloaded it diskimage registered it and then tried to install to a freshly formated USB thumb drive
comment:9 by , 4 years ago
Milestone: | Unscheduled → R1/beta4 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Could be related to hrev55091?