Installer: ensure the package administrative path exists

Fixes #16984

Change-Id: Ia662147395130be4498eefbe11f5351533c88ff2
Reviewed-on: https://review.haiku-os.org/c/haiku/+/4242
Reviewed-by: Adrien Destugues <pulkomandy@gmail.com>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>